force-app/main/default/objects/PaymentAllocation__c/PaymentAllocation__c.object-meta.xml
<CustomObject>
    <label>PaymentAllocation</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>PaymentAllocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentAllocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>