force-app/main/default/objects/PaymentAllocation__c/fields/amountoustandingrelatedinvoice__c.field-meta.xml
<CustomField>
    <fullName>amountoustandingrelatedinvoice__c</fullName>
    <formula>InvoiceId__r.AmountOutstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>amountoustandingrelatedinvoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>