force-app/main/default/objects/PaymentAllocation__c/fields/Automatic_Payment__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to handle manual payments on credit notes</description>
    <label>Automatic Payment</label>
    <type>Checkbox</type>
</CustomField>