force-app/main/default/objects/PaymentAllocation__c/fields/BankStatementAccount__c.field-meta.xml
<CustomField>
    <fullName>BankStatementAccount__c</fullName>
    <formula>BankstatementId__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementAccount</label>
    <type>Text</type>
</CustomField>