force-app/main/default/objects/PaymentAllocation__c/fields/BankStatementDocument__c.field-meta.xml
<CustomField>
    <fullName>BankStatementDocument__c</fullName>
    <formula>BankstatementId__r.Document_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementDocument</label>
    <type>Text</type>
</CustomField>