force-app/main/default/objects/PaymentAllocation__c/fields/BankStatementEntryDate__c.field-meta.xml
<CustomField>
    <fullName>BankStatementEntryDate__c</fullName>
    <formula>BankstatementId__r.Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementEntryDate</label>
    <type>Date</type>
</CustomField>