force-app/main/default/objects/PaymentAllocation__c/fields/BankstatementId__c.field-meta.xml
<CustomField>
    <fullName>BankstatementId__c</fullName>
    <label>Bank Statement</label>
    <referenceTo>Bank_Statement__c</referenceTo>
    <relationshipLabel>PaymentAllocations</relationshipLabel>
    <relationshipName>PaymentAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>