force-app/main/default/objects/PaymentAllocation__c/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <formula>InvoiceId__r.Invoiced_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced_Date</label>
    <type>Date</type>
</CustomField>