force-app/main/default/objects/PaymentAllocation__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <label>Invoice_Header</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. - PaymentAllocation.InvoiceId__c</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Invoice_Header__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Invoice_Header__c.Query__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Invoice_Header__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Query</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>PaymentAllocations</relationshipLabel>
    <relationshipName>PaymentAllocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>