force-app/main/default/objects/PaymentAllocation__c/fields/IsCreditNote__c.field-meta.xml
<CustomField>
    <fullName>IsCreditNote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreditNote</label>
    <type>Checkbox</type>
</CustomField>