force-app/main/default/objects/PaymentAllocation__c/fields/IsDirectDebit__c.field-meta.xml
<CustomField>
    <fullName>IsDirectDebit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDirectDebit</label>
    <type>Checkbox</type>
</CustomField>