force-app/main/default/objects/PaymentAllocation__c/fields/IsFromCPCard__c.field-meta.xml
<CustomField>
    <fullName>IsFromCPCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFromCPCard</label>
    <type>Checkbox</type>
</CustomField>