force-app/main/default/objects/PaymentAllocation__c/fields/Original_Invoice_Payment_Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Payment_Credit_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to create a relationship between a credit note payment and an original invoice payment</description>
    <label>Original Invoice Payment (Credit Notes)</label>
    <referenceTo>PaymentAllocation__c</referenceTo>
    <relationshipLabel>Original Invoice Payments</relationshipLabel>
    <relationshipName>OriginalInvoicePayments</relationshipName>
    <type>Lookup</type>
</CustomField>